# Comparing-GNN-based-and-ID-based-Item-Embeddings-Web-Scale-Perspective

./: .gitignore  LICENSE  README.md  dvc.yaml  preprocess.py  pyproject.toml  requirements.txt  run_multiple_times.sh  run_pipeline.sh  train_finetune.py  train_pretrain.py  train_twhin.py
.dvc/: config
comparing-gnn-based-and-id-based-item-embeddings-web-scale-perspective/: losses.py  models.py  utils.py
data/: .gitignore  dataset.parquet.dvc
gnn_utils/: dataset.py  losses.py  metrics.py  models.py  utils.py
gnn_utils/tracking/: __init__.py  mlflow.py  noop_mlflow.py
scripts/auxiliary/: average_results.py
scripts/data/: preprocess.py
scripts/train/: train_finetune.py  train_pretrain.py  train_twhin.py
utils/: losses.py  models.py
