[project]
name = "comparing-gnn-based-and-id-based-item-embeddings-web-scale-perspective"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dvc>=3.66.1",
    "numpy>=2.4.1",
    "polars>=1.37.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# list of all codes - https://docs.astral.sh/ruff/rules/
select = ["E4", "E7", "E9", "F", "W", "I"]
ignore = ["F403", "E721"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
comparing-gnn-based-and-id-based-item-embeddings-web-scale-perspective = { workspace = true }

[dependency-groups]
dev = [
    "comparing-gnn-based-and-id-based-item-embeddings-web-scale-perspective",
]
