[project]
name = "gnn_utils"
version = "0.1.0"
description = "Training transformer-based sequential recommender"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
    "polars>=1.37.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
mlflow = [
    "mlflow>=3.8.1",
    "psutil>=7.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "ty>=0.0.39",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# list of all codes - https://docs.astral.sh/ruff/rules/
select = [
    "E",
    "F",
    "I",
    "B",
    "N",
    "UP",
    "SIM",
    "C4",
    "PTH",
    "PERF",
    "NPY",
    "TID",
]

ignore = [
    "PERF203",
    "SIM115",
    "PTH123",
    "B007",
    "N812",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
    "TID252",
]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["gnn_utils"]
combine-as-imports = true


[tool.ty.rules]
unresolved-import = "ignore"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["gnn_utils"]
